intel/bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/log.txt
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:125:20: error: use of undeclared identifier 'NULL'
            return NULL;
                   ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:133:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:134:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:140:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:141:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:147:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:148:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:154:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:155:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:162:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:166:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:167:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:170:20: error: use of undeclared identifier 'NULL'
            return NULL;
                   ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:178:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:179:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:185:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:186:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:193:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v2_with_main.c:194:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
